<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WishlistActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_wishlist"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/language_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_button"
            android:textColor="@android:color/white"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="end" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/empty_wishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_wishlist"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewWishlist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/navigation_products"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/navigation_products"
            android:textColor="@android:color/white"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <Button
            android:id="@+id/navigation_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/navigation_cart"
            android:textColor="@android:color/white"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <Button
            android:id="@+id/navigation_wishlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/navigation_wishlist"
            android:textColor="@android:color/white"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <Button
            android:id="@+id/navigation_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/navigation_reviews"
            android:textColor="@android:color/white"
            android:background="?attr/selectableItemBackgroundBorderless"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
