<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".CartActivity">

    <!-- Empty Cart Message -->
    <TextView
        android:id="@+id/empty_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_cart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/totalPriceLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <!-- Toolbar without back arrow and with title -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/title_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cart"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/language_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_button"
            android:textColor="@android:color/white"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="end" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Cart Items RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/totalPriceLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <!-- Total Price and Checkout Button Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/totalPriceLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Total Price TextView -->
        <TextView
            android:id="@+id/textViewTotalPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#090606"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Checkout Button -->
        <Button
            android:id="@+id/buttonCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:padding="16dp"
            android:text="Checkout"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/navigation_products"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/navigation_products"
            android:textColor="@android:color/white"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <Button
            android:id="@+id/navigation_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/navigation_cart"
            android:textColor="@android:color/white"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <Button
            android:id="@+id/navigation_wishlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/navigation_wishlist"
            android:textColor="@android:color/white"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <Button
            android:id="@+id/navigation_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/navigation_reviews"
            android:textColor="@android:color/white"
            android:background="?attr/selectableItemBackgroundBorderless"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
